--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -29,6 +29,9 @@
                                 <a class="nav-link" [routerLink]="['qldt']" routerLinkActive="router-link-active"  >Quản lí doang thu</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" [routerLink]="['addproduct']" routerLinkActive="router-link-active"  >Thêm sản phẩm</a>
+                            </li>
+                            <li class="nav-item">
                                 <a (click)="Logout()" class="nav-link" >Đăng Xuất</a>
                             </li>
                         </ul>
