--- a/src/app/admin/pages/listorder/listorder.component.html
+++ b/src/app/admin/pages/listorder/listorder.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <h1 style="text-align: center;font-weight: 100;">Đơn Hàng Cần Phê Duyệt</h1>
+    <h1 style="text-align: center;font-weight: 100;">Đơn Hàng Cần Phê Duyệt:{{this.listitem.length}}</h1>
     <div class="card-body">
         <table class="table table-striped table-inverse table-responsive table-bordered">
             <thead class="thead-inverse">
