--- a/src/app/client/pages/order/order.component.html
+++ b/src/app/client/pages/order/order.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="this.fitercategory.length!==0">
+<div style="margin-top: 60px;font-size: 20px;" class="container" *ngIf="this.fitercategory.length!==0">
     <h4>thông tin khách hàng</h4>
     <div class="row">
         
@@ -22,10 +22,10 @@
                         <p>ngày mua:{{info.email}}</p>
                        </div> -->
                        <div class="col-md-12"  style="float: right; background-color: rgb(255, 255, 255);">
-                        <h4>thông tin đơn hang</h4>
+                        <h4 style="font-style: italic;font-size: 20px;">thông tin đơn hàng</h4>
                             <table class="table table-bordered" >
                                 <thead class="table-primary">
-                                    <tr>
+                                    <tr style="font-size: 15px; font-style: italic;">
                                         <th>số lượng sản phẩm</th>
                                         <th>Id đơn hàng</th>
                                         <th>tổng tiền đơn hàng</th>
@@ -40,7 +40,7 @@
                                     </tr>
                                 </tbody>
                                 <thead class="table-primary">
-                                    <tr>
+                                    <tr style="font-size: 15px;font-style: italic;">
                                         <th>hình</th>
                                         <th>tên sản phẩm</th>
                                         <th>giá tiền</th>
