--- a/src/app/client/pages/product/product.component.html
+++ b/src/app/client/pages/product/product.component.html
@@ -51,7 +51,7 @@
           <img  class="col-md-3 col-sm-4"  [src]="path" alt=""  > 
           <nav class="col-md-7 col-sm-6">
             <div class="form-group">
-              <input type="text" class="form-control"  [(ngModel)]="searchTerm" (keyup)="search($event)" placeholder="Search">
+              <input type="text" class="form-control" placeholder="Search">
           </div>
           </nav>
           <div class="col-md-2 col-sm-2">
